--- a/clef25/advertisement-detection/subtask-2-classification/minilm-baseline/requirements.txt
+++ b/clef25/advertisement-detection/subtask-2-classification/minilm-baseline/requirements.txt
@@ -3,7 +3,7 @@ datasets==3.2.0
 jupyterlab==4.2.5
 pandas==2.2.3
 scikit-learn==1.6.0
-spacy==3.8.3
-torch==2.2.1
+spacy
+torch
 transformers==4.48.0
 tira>=0.0.159
